--- a/css/board.css
+++ b/css/board.css
@@ -542,6 +542,7 @@
 
     .board::-webkit-scrollbar-thumb:hover {
         background: #2a3d59;
+        cursor: pointer;
     }
 
 
